# dotfiles

./: .Xresources  .bashrc  .gitignore  .gitmodules  .xinitrc  README
.config/: starship.toml
.config/alacritty/: alacritty.toml  alacritty.yml
.config/awesome/: rc.lua
.config/dmenu/: config.def.h  config.h  dmenu
.config/dwm/: autostart.sh  config.def.h  config.def.h.orig  config.h  config.mk.orig  config.mk.rej  drw.c.rej  dwm  dwm.1.orig  dwm.c  dwm.c.orig
.config/fish/: config.fish  fish_variables
.config/i3/: config
.config/i3status/: config
.config/i3status-rust/: config.toml
.config/polybar/: config.ini
.config/ranger/: rc.conf
.config/st/: config.h
.config/wezterm/: wezterm.lua
.config/yazi/: package.toml  theme.toml
.config/zellij/: config.kdl
adrian/: .Xauthority  .Xresources  .bash_history  .bashrc  .gitconfig  .lesshst  .profile  .viminfo  .wget-hsts  .xsession-errors  Highlight test  github-recovery-codes.txt
adrian/.config/: pavucontrol.ini  starship.toml
adrian/.dwm/: autostart.sh
adrian/vimwiki/: ToDo.wiki  WikiTest.wiki  index.wiki
bevy_projects/iso/: Cargo.toml  README.md
bevy_projects/iso/examples/: field_of_movement.rs  field_of_view.rs  iso_grid.rs
bevy_projects/iso/src/: algorithms.rs  bounds.rs  direction.rs  iso.rs  layout.rs  lib.rs  mapping.rs  tile_type.rs
bevy_projects/iso/src/algorithms/: fom.rs  fov.rs
bevy_projects/iso/src/direction/: edge_direction.rs  impls.rs  tests.rs  vertex_direction.rs  way.rs
bevy_projects/iso/src/iso/: convert.rs  impls.rs  iter.rs  rings.rs  tests.rs
bevy_projects/iso/src/mapping/: chunks.rs  layers.rs  utils.rs
gplates_World/: Continents.gpml  Cratons.gpml  Failed Rifts.gpml  Flowlines.gpml  Island Arcs.gpml  Land_Raster.gpml  Ocean crust.gpml  Ocean_Raster.gpml  Ocean_Raster.png.band1.level0.gplates.cache  Ocean_Raster.png.band1.mipmaps.gplates.cache  Rifts.gpml  Subduction zones.gpml  Worl.gproj  rotation.rot
gtd/: inbox.norg  index.norg
pixel/: 21_05_transformation.aseprite  25_05_bittersweet.aseprite
rust_projects/advent_of_code_2024/: Cargo.toml  arbolito.txt
rust_projects/conlang/: Cargo.toml  README.md
rust_projects/microbit/: Cargo.toml
rust_projects/prost_test/: Cargo.toml
rust_projects/rc/: Cargo.toml  pins.txt
rust_projects/rc/src/: main.rs
rust_projects/rpg_dojo/: Cargo.toml
rust_projects/tonic_test/: Cargo.toml
rust_projects/tonic_test/proto/: messages.proto
rust_projects/tonic_test/src/: client.rs  server.rs
test/: index.norg
wiki/: index.norg
wiki/cosmology/: star_system.norg  universe.norg
wiki/culture/: economy.norg  education.norg  entertainment.norg  food.norg  language.norg  medicine.norg  military.norg  people.norg  profesions.norg
wiki/history/: age_0.norg  age_1.norg  age_2.norg  age_3.norg  compendium.norg
wiki/magic/: alchemy.norg  rules.norg  (+1 more)
(+6502 files in other folders)
