[package]
name = "tonic_test"
version = "0.1.0"
edition = "2021"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.12.4"

[build-dependencies]
tonic-build = "0.11"
